@@ -175,6 +175,14 @@ void picture_selection_dialog (TOPLEVEL *w_current)
 						      GTK_STOCK_OPEN, 
 						      GTK_RESPONSE_ACCEPT,
 						      NULL);
+#if GTK_CHECK_VERSION (2,6,0)
+  /* Set the alternative button order (ok, cancel, help) for other systems */
+  gtk_dialog_set_alternative_button_order(GTK_DIALOG(w_current->pfswindow),
+					  GTK_RESPONSE_ACCEPT,
+					  GTK_RESPONSE_CANCEL,
+					  -1);
+#endif
+
   if (w_current->pixbuf_filename)
     gtk_file_chooser_set_filename(GTK_FILE_CHOOSER(w_current->pfswindow), 
 				  w_current->pixbuf_filename);
@@ -707,6 +715,15 @@ void picture_change_filename_dialog (TOPLEVEL *w_current)
 						      GTK_STOCK_OPEN, 
 						      GTK_RESPONSE_ACCEPT,
 						      NULL);
+
+#if GTK_CHECK_VERSION (2,6,0)
+  /* Set the alternative button order (ok, cancel, help) for other systems */
+  gtk_dialog_set_alternative_button_order(GTK_DIALOG(w_current->pfswindow),
+					  GTK_RESPONSE_ACCEPT,
+					  GTK_RESPONSE_CANCEL,
+					  -1);
+#endif
+
   if (w_current->pixbuf_filename)
     gtk_file_chooser_set_filename(GTK_FILE_CHOOSER(w_current->pfswindow), 
 				  w_current->pixbuf_filename);
