@@ -174,6 +174,15 @@ x_fileselect_open(TOPLEVEL *toplevel)
                                         GTK_STOCK_CANCEL, GTK_RESPONSE_CANCEL,
                                         GTK_STOCK_OPEN,   GTK_RESPONSE_ACCEPT,
                                         NULL);
+
+#if GTK_CHECK_VERSION (2,6,0)
+  /* Set the alternative button order (ok, cancel, help) for other systems */
+  gtk_dialog_set_alternative_button_order(GTK_DIALOG(dialog),
+					  GTK_RESPONSE_ACCEPT,
+					  GTK_RESPONSE_CANCEL,
+					  -1);
+#endif
+
   x_fileselect_add_preview (GTK_FILE_CHOOSER (dialog));  
   g_object_set (dialog,
                 /* GtkFileChooser */
@@ -223,6 +232,14 @@ x_fileselect_save (TOPLEVEL *toplevel)
                                         GTK_STOCK_CANCEL, GTK_RESPONSE_CANCEL,
                                         GTK_STOCK_SAVE,   GTK_RESPONSE_ACCEPT,
                                         NULL);
+
+#if GTK_CHECK_VERSION (2,6,0)
+  /* Set the alternative button order (ok, cancel, help) for other systems */
+  gtk_dialog_set_alternative_button_order(GTK_DIALOG(dialog),
+					  GTK_RESPONSE_ACCEPT,
+					  GTK_RESPONSE_CANCEL,
+					  -1);
+#endif
 
   /* set default response signal. This is usually triggered by the 
      "Return" key */
@@ -279,6 +296,15 @@ int x_fileselect_load_backup(TOPLEVEL *toplevel, GString *message)
 			  GTK_MESSAGE_QUESTION,
 			  GTK_BUTTONS_YES_NO,
 			  message->str);
+
+#if GTK_CHECK_VERSION (2,6,0)
+  /* Set the alternative button order (ok, cancel, help) for other systems */
+  gtk_dialog_set_alternative_button_order(GTK_DIALOG(dialog),
+					  GTK_RESPONSE_YES,
+					  GTK_RESPONSE_NO,
+					  -1);
+#endif
+
   gtk_widget_show (dialog);
   if (gtk_dialog_run ((GtkDialog*)dialog) == GTK_RESPONSE_YES) {
     gtk_widget_destroy(dialog);  
