@@ -6,6 +6,8 @@
 2007-04-21 Carlos Nieves Onega <cnieves (AT) iespana (DOT) es>
 
 	* src/x_fileselect.c:
+	 - Set the alternative button order for gtk dialogs 
+	   (now with correct responses).
 	 - Reverted the changes below. 
 	   gtk_dialog_set_alternative_button_order should have the same
 	   responses as the dialogs.
